responsive tablet mobile

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&amp;display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./assets/css/app.css">
+    <link rel="stylesheet" href="./assets/css/responsive.css">
   </head>
   <body> 
     <div class="travel-container"> 
@@ -15,10 +16,9 @@
         <div class="travel-top__list-item"> <a class="travel-top__item-link">
              Thing to do </a><a class="travel-top__item-link travel-top__item-link--active">
              Travel Guide </a><a class="travel-top__item-link">
-             Tours</a>
-          <div class="travel-top__close">
-            <image class="travel-top__close-icon" src="./assets/images/close-icon.png" alt="close icon"> </image>
-          </div>
+             Tours</a></div>
+        <div class="travel-top__close">
+          <image class="travel-top__close-icon" src="./assets/images/close-icon.png" alt="close icon"> </image>
         </div>
       </div>
       <div class="travel-card"> 
@@ -234,10 +234,10 @@
         <div class="footer-bottom"> 
           <div class="footer-bottom__copy-right">Copyright© 2021 UIHUT LLC. All rights reserved</div>
           <div class="footer-bottom__social-list"> <a class="footer-bottom__social-item"> 
-              <image src="./assets/images/fb.png"></image></a><a class="footer-bottom__social-item"> 
-              <image src="./assets/images/linkedin.png"></image></a><a class="footer-bottom__social-item"> 
-              <image src="./assets/images/twitter.png"></image></a><a class="footer-bottom__social-item"> 
-              <image src="./assets/images/instagram.png"></image></a></div>
+              <image class="footer-bottom__social-item-image" src="./assets/images/fb.png"></image></a><a class="footer-bottom__social-item"> 
+              <image class="footer-bottom__social-item-image" src="./assets/images/linkedin.png"></image></a><a class="footer-bottom__social-item"> 
+              <image class="footer-bottom__social-item-image" src="./assets/images/twitter.png"></image></a><a class="footer-bottom__social-item"> 
+              <image class="footer-bottom__social-item-image" src="./assets/images/instagram.png"></image></a></div>
         </div>
       </div>
     </div>
